# JustRelaxFileSystem

./: .clang-format  .gitignore  CMakeLists.txt  cli.cpp  format.sh
JRFS/: JRFS.cpp  JRFS.h  JRFS.hpp  api.hpp  config.hpp  file_handler.cpp  file_handler.hpp  filesystem.cpp  filesystem.hpp
JRFS/details/: config.hpp  data_block.cpp  data_block.hpp  indirect_block.cpp  indirect_block.hpp  inode.cpp  inode.hpp  super_block.cpp  super_block.hpp
JRFS/util/: term_style.hpp  utility.cpp  utility.hpp
docs/: Doxyfile  annotated.html  classes.html  classjrfs_1_1file__handler-members.html  classjrfs_1_1file__handler.html  classpt_1_1_term_style-members.html  classpt_1_1_term_style.html  config_8hpp.html  config_8hpp__dep__incl.map  config_8hpp__dep__incl.md5  config_8hpp_source.html  data__block_8cpp.html  data__block_8cpp__incl.map  data__block_8cpp__incl.md5  data__block_8hpp.html  data__block_8hpp__dep__incl.map  data__block_8hpp__dep__incl.md5  data__block_8hpp__incl.map  data__block_8hpp__incl.md5  data__block_8hpp_source.html  dir_000000_000001.html  dir_000001_000002.html  dir_06074d48e55808dd6d3dfecb7162380c.html  dir_06074d48e55808dd6d3dfecb7162380c_dep.map  dir_06074d48e55808dd6d3dfecb7162380c_dep.md5  dir_3a9566a59065b472db4c35197e4145cd.html  dir_e4833ef13470368fdd7fe4fbda5ea4d5.html  dir_e4833ef13470368fdd7fe4fbda5ea4d5_dep.map  dir_e4833ef13470368fdd7fe4fbda5ea4d5_dep.md5  file__handler_8cpp.html  file__handler_8hpp.html  file__handler_8hpp_source.html  files.html  filesystem_8cpp.html  filesystem_8cpp__incl.map  filesystem_8cpp__incl.md5  filesystem_8hpp.html  filesystem_8hpp__dep__incl.map  filesystem_8hpp__dep__incl.md5  filesystem_8hpp__incl.map  (+62 more)
docs/html/: annotated.html  api_8cpp.html  api_8hpp.html  api_8hpp_source.html  classes.html  classjrfs_1_1image-members.html  classjrfs_1_1image.html  classjrfs_1_1super__block.html  config_8hpp.html  config_8hpp_source.html  dir_06074d48e55808dd6d3dfecb7162380c.html  dir_3a9566a59065b472db4c35197e4145cd.html  dir_e4833ef13470368fdd7fe4fbda5ea4d5.html  files.html  functions.html  functions_func.html  functions_rela.html  functions_vars.html  image_8cpp.html  image_8hpp.html  image_8hpp_source.html  index.html  jquery.js  menudata.js  namespacejrfs.html  namespacejrfs_1_1conf.html  namespacemembers.html  namespacemembers_enum.html  namespacemembers_func.html  namespacemembers_vars.html  namespacept.html  namespaces.html  super__block_8cpp.html  super__block_8hpp.html  super__block_8hpp_source.html  utility_8hpp_source.html
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  enumvalues_8.js  enumvalues_9.js  enumvalues_a.js  enumvalues_b.js  enumvalues_c.js  files_0.js  files_1.js  (+22 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  enumvalues_8.js  enumvalues_9.js  enumvalues_a.js  enumvalues_b.js  (+38 more)
tests/: check_utils.cpp  end2end.cpp  file_and_directory.cpp  image.cpp  test_util.hpp
