CMAKE_MINIMUM_REQUIRED(VERSION 3.15)
PROJECT(JustRelaxFileSystem)

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

FILE(GLOB_RECURSE JRFS_LIB_SOURCES JRFS/*pp)

MESSAGE(STATUS "Found JRFS Source Files: ${JRFS_LIB_SOURCES}")

ADD_LIBRARY(JRFS_LIB ${JRFS_LIB_SOURCES})

FIND_PACKAGE(gflags REQUIRED)
INCLUDE_DIRECTORIES(${GFLAGS_INCLUDE_DIRS})

ADD_EXECUTABLE(jrfs-cli cli.cpp)
TARGET_LINK_LIBRARIES(jrfs-cli JRFS_LIB ${GFLAGS_LIBRARIES})